--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -2,6 +2,35 @@
 
 @theme {
   --color-sp-darkgrey: #1e1e1e;
+
+  --animate-slide-in: slideIn 1s ease-out forwards;
+
+  --animate-slide-out: slideOut 1s ease-in forwards;
+
+  @keyframes slideIn {
+    0% {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes slideOut {
+    0% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+
+    100% {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+  }
+
 }
 
 * {
